--- a/index.html
+++ b/index.html
@@ -50,7 +50,13 @@
       </a>
     </nav>
     <main>
-      
+      <h1 class="main-heading">Entries</h1>
+      <div class="card">
+        <h2 class="card__heading">PHP is amzing!</h2>
+      </div>
+      <div class="card">
+        <h2 class="card__heading">I am learning PHP!</h2>
+      </div>
     </main>
   </body>
 </html>
