responsive design for container in main

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./styles/normalize.css" />
-    <link rel="stylesheet" href="./styles/styles.css?v=1" />
+    <link rel="stylesheet" href="./styles/styles.css" />
     <title>PHP Diary</title>
   </head>
   <body>
@@ -50,12 +50,14 @@
       </a>
     </nav>
     <main>
-      <h1 class="main-heading">Entries</h1>
-      <div class="card">
-        <h2 class="card__heading">PHP is amzing!</h2>
-      </div>
-      <div class="card">
-        <h2 class="card__heading">I am learning PHP!</h2>
+      <div class="container">
+        <h1 class="main-heading">Entries</h1>
+        <div class="card">
+          <h2 class="card__heading">PHP is amzing!</h2>
+        </div>
+        <div class="card">
+          <h2 class="card__heading">I am learning PHP!</h2>
+        </div>
       </div>
     </main>
   </body>
