finished main section and added footer

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
       </div>
     </nav>
 
-    <main>
+    <main class="main">
       <div class="container">
         <h1 class="main-heading">Entries</h1>
         <div class="card">
@@ -159,7 +159,33 @@
             </p>
           </div>
         </div>
+        <ul class="pagination">
+          <li class="pagination__li">
+            <a href="#" class="pagination__link">⏵︎</a>
+          </li>
+          <li class="pagination__li">
+            <a href="#" class="pagination__link pagination__li--active">1</a>
+          </li>
+          <li class="pagination__li">
+            <a href="#" class="pagination__link pagination__li--active">2</a>
+          </li>
+          <li class="pagination__li">
+            <a href="#" class="pagination__link pagination__li--active">3</a>
+          </li>
+          <li class="pagination__li">
+            <a href="#" class="pagination__link">⏴︎</a>
+          </li>
+        </ul>
       </div>
     </main>
+    <footer class="footer">
+        <h3 class="footer__heading">PHP diary project</h3>
+        <p class="footer__desc">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta nulla
+          ut quibusdam commodi iure rerum suscipit aut doloribus rem officia
+          magnam, voluptatum amet numquam ad fugiat adipisci quos, veniam ea.
+        </p>
+      </div>
+    </footer>
   </body>
 </html>
