completed the design

--- a/index.html
+++ b/index.html
@@ -179,13 +179,12 @@
       </div>
     </main>
     <footer class="footer">
-        <h3 class="footer__heading">PHP diary project</h3>
-        <p class="footer__desc">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta nulla
-          ut quibusdam commodi iure rerum suscipit aut doloribus rem officia
-          magnam, voluptatum amet numquam ad fugiat adipisci quos, veniam ea.
-        </p>
-      </div>
+      <h3 class="footer__heading">PHP diary project</h3>
+      <p class="footer__desc">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta nulla ut
+        quibusdam commodi iure rerum suscipit aut doloribus rem officia magnam,
+        voluptatum amet numquam ad fugiat adipisci quos, veniam ea.
+      </p>
     </footer>
   </body>
 </html>
